--- a/Main.resx
+++ b/Main.resx
@@ -118,6 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="showInfoFormBt.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAYAAAByDd+UAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vwAADr8BOAVTJAAAAQFJREFUSEu9lgEOwiAMRbnRtlN5JQ+7RCl+JpS/jsL0Jd8s7WsTJaihl3Vd95jX
+        SXZo85DlZjDmhy3zBGv6YAtGgnU2bLDMsiwPqEGemVMGKocNSLZte0I5RRw2K4FSw0QJ2gfefg7aX7qk
+        yIjTeJdCwahXubphnZl2UW5gZ5oa8aH5BkmNG9B7Y3b7rZ/g9co0xfKeMbSPMoXdU9cCYdpvChdM+7rw
+        9480FQ1m3OTHF9e1mHFjPj/UuvHTiy/oRtVUjHqNeymAEYd6TJKgfeDt56Bdw0SJdaYZdmY5UDhsoEx5
+        T9k904FqwwZHgnV9sAWeYI0ftswKxuaJy274qx/CG4fAV+l6OzxWAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAgIAAAAEAIAAoCAEAFgAAACgAAACAAAAAAAEAAAEAIAAAAAAAAAABAPY6AQD2OgEAAAAAAAAA
